--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                             </div>
                             <div class="col-md-5 center-item">
                                 <div class="input-group number-spinner">
-                                    <button id="case-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                                    <button onclick="handleProductChange(false);" class="btn btn-default"><i
+                                            class="fas fa-minus"></i></button>
                                     <input id="case-count" type="text" class="form-control text-center" value="1">
-                                    <button id="case-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                                    <button onclick="handleProductChange(true);" class="btn btn-default"><i
+                                            class="fas fa-plus"></i></button>
 
                                 </div>
                                 <h5 id="case-total">$59</h5>
@@ -97,18 +99,16 @@
         //       document.getElementById("case-total").innerText = "$" + caseTotal;
         //   })
 
-        document.getElementById("case-increase").addEventListener("click", function() {
-            handleProductChange(true);
-        })
-
-        document.getElementById("case-decrease").addEventListener("click", function() {
-            handleProductChange(false)
-        })
-
         function handleProductChange(isIncrease) {
             const caseinput = document.getElementById("case-count");
             const caseCount = parseFloat(caseinput.value);
-            const caseNewCount = caseCount - 1;
+            let caseNewCount = caseCount;
+            if (isIncrease == true) {
+                caseNewCount = caseCount + 1;
+            }
+            if (isIncrease == false && caseCount > 0) {
+                caseNewCount = caseCount - 1;
+            }
             caseinput.value = caseNewCount;
             const caseTotal = caseNewCount * 59;
             document.getElementById("case-total").innerText = "$" + caseTotal;
