secone frome home wrong

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 
                             <div class="col-md-5 center-item">
                                 <div class="input-group number-spinner">
-                                    <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                                    <input type="text" class="form-control text-center" value="1">
-                                    <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                                    <button onclick="handleProductChange('phone', false)" class="btn btn-default"><i
+                                            class="fas fa-minus"></i></button>
+                                    <input id="phone-count" type="text" class="form-control text-center" value="1">
+                                    <button onclick="handleProductChange('phone', true)" class="btn btn-default"><i
+                                            class="fas fa-plus"></i></button>
                                 </div>
-                                <h5>$1219</h5>
+                                <h5 id="phone-total">$1219</h5>
                                 <img src="images/remove.png" alt="" class="remove-item">
                             </div>
                         </div>
@@ -43,10 +45,10 @@
                             </div>
                             <div class="col-md-5 center-item">
                                 <div class="input-group number-spinner">
-                                    <button onclick="handleProductChange(false);" class="btn btn-default"><i
+                                    <button onclick="handleProductChange('case', false);" class="btn btn-default"><i
                                             class="fas fa-minus"></i></button>
                                     <input id="case-count" type="text" class="form-control text-center" value="1">
-                                    <button onclick="handleProductChange(true);" class="btn btn-default"><i
+                                    <button onclick="handleProductChange('case', true);" class="btn btn-default"><i
                                             class="fas fa-plus"></i></button>
 
                                 </div>
@@ -81,6 +83,52 @@
     </section>
 
     <script>
+        function handleProductChange(product, isIncrease) {
+            const caseinput = document.getElementById(product + '-count');
+            const caseCount = parseFloat(caseinput.value);
+            let caseNewCount = caseCount;
+            if (isIncrease == true) {
+                caseNewCount = caseCount + 1;
+            }
+            if (isIncrease == false && caseCount > 0) {
+                caseNewCount = caseCount - 1;
+            }
+            caseinput.value = caseNewCount;
+            const caseTotal = caseNewCount * 59;
+            document.getElementById(product + '-count').innerText = "$" + caseTotal;
+        }
+
+
+        // function handlePhoneChange(isIncrease) {
+        //     const phoneinput = document.getElementById("phone-count");
+        //     const phoneCount = parseFloat(phoneinput.value);
+        //     let phoneNewCount = phoneCount;
+        //     if (isIncrease == true) {
+        //         phoneNewCount = phoneCount + 1;
+        //     }
+        //     if (isIncrease == false && phoneCount > 0) {
+        //         phoneNewCount = phoneCount - 1;
+        //     }
+        //     phoneinput.value = phoneNewCount;
+        //     const caseTotal = phoneNewCount * 1219;
+        //     document.getElementById("phone-total").innerText = "$" + caseTotal;
+        // }
+        // function handleProductChange(isIncrease) {
+        //     const caseinput = document.getElementById("case-count");
+        //     const caseCount = parseFloat(caseinput.value);
+        //     let caseNewCount = caseCount;
+        //     if (isIncrease == true) {
+        //         caseNewCount = caseCount + 1;
+        //     }
+        //     if (isIncrease == false && caseCount > 0) {
+        //         caseNewCount = caseCount - 1;
+        //     }
+        //     caseinput.value = caseNewCount;
+        //     const caseTotal = caseNewCount * 59;
+        //     document.getElementById("case-total").innerText = "$" + caseTotal;
+        // }
+
+
         //   document.getElementById("case-increase").addEventListener("click", function() {
         //       const caseinput = document.getElementById("case-count");
         //       const caseCount = parseFloat(caseinput.value);
@@ -99,20 +147,6 @@
         //       document.getElementById("case-total").innerText = "$" + caseTotal;
         //   })
 
-        function handleProductChange(isIncrease) {
-            const caseinput = document.getElementById("case-count");
-            const caseCount = parseFloat(caseinput.value);
-            let caseNewCount = caseCount;
-            if (isIncrease == true) {
-                caseNewCount = caseCount + 1;
-            }
-            if (isIncrease == false && caseCount > 0) {
-                caseNewCount = caseCount - 1;
-            }
-            caseinput.value = caseNewCount;
-            const caseTotal = caseNewCount * 59;
-            document.getElementById("case-total").innerText = "$" + caseTotal;
-        }
     </script>
 </body>
 
